vlib/v/checker/tests/map_ops.out
vlib/v/checker/tests/map_ops.vv:3:7: error: invalid key: expected `int`, not `rune`
    1 | fn test_map() {
    2 |     mut m := map[int]string{}
    3 |     _ = m[`!`]
      |          ~~~~~
    4 |     m['hi'] = 8
    5 |     m[&m] += 4
vlib/v/checker/tests/map_ops.vv:4:3: error: invalid key: expected `int`, not `string`
    2 |     mut m := map[int]string{}
    3 |     _ = m[`!`]
    4 |     m['hi'] = 8
      |      ~~~~~~
    5 |     m[&m] += 4
    6 | }
vlib/v/checker/tests/map_ops.vv:4:12: error: cannot assign to `m['hi']`: expected `string`, not `int literal`
    2 |     mut m := map[int]string{}
    3 |     _ = m[`!`]
    4 |     m['hi'] = 8
      |               ^
    5 |     m[&m] += 4
    6 | }
vlib/v/checker/tests/map_ops.vv:5:3: error: invalid key: expected `int`, not `&map[int]string`
    3 |     _ = m[`!`]
    4 |     m['hi'] = 8
    5 |     m[&m] += 4
      |      ~~~~
    6 | }
vlib/v/checker/tests/map_ops.vv:5:11: error: invalid right operand: string += int literal
    3 |     _ = m[`!`]
    4 |     m['hi'] = 8
    5 |     m[&m] += 4
      |              ^
    6 | }
vlib/v/checker/tests/map_ops.vv:5:11: error: cannot assign to `m[&m]`: expected `string`, not `int literal`
    3 |     _ = m[`!`]
    4 |     m['hi'] = 8
    5 |     m[&m] += 4
      |              ^
    6 | }
